# thesis--transformers

./: .gitignore  README.md  data.py  model.py  pyproject.toml  rain.py  run_gsum.py  run_gsum_abs.py  run_gsum_abs_test.py  run_gsum_ext.py  run_gsum_ext_test.py  run_preprocessing.py  run_sentiment.py  run_sentiment_transformer.py  run_seq2seq.py  train.py  transformer.py
data/: README.md
data/trained/: README.md
data/trained/2021-07-08-0858/: README.md  config.json
data/trained/2021-07-18-2237/: config.json
data/trained/2021-07-19-1004/: config.json
data/trained/2021-07-22-0756/: config.json
data/trained/2021-07-23-2123/: config.json
data/trained/2021-07-24-1139/: config.json
gsum/: __init__.py  config.py  data.py  preprocess.py  preprocess_inputs.py  scoring.py  summarizer.py  train.py
lib/: oracle_summary.py  prepare_raw_cnndailymail.py  prepare_raw_mlsum.py  prepare_raw_sponard.py  prepare_raw_swisstext.py  text_preprocessing.py  text_similarity.py  textrank.py  utils.py
multiproc/: __init__.py
notebooks/: 1_parameter_estimation.ipynb  dataset_analysis.ipynb  gsum_evaluation.ipynb  gsum_reporting.ipynb  rain.ipynb  sentiment_analysis.py.ipynb  sentiment_transformers.ipynb  transformer_models.ipynb
playground/sentiment/: __init__.py  model.py
playground/sentiment_transformer/: model.py
playground/seq2seq_transformer/: model.py
sentiment/: __init__.py  data.py
sentiment_transformer/: __init__.py  data.py  model.py
test/: test_gsum_preprocess.py  test_lib.py  test_oracle_summary.py  test_text_preprocessing.py  test_textrank.py
(+59 files in other folders)
