[tool.poetry]
name = "exp--pytorch-transformers"
version = "0.1.0"
description = "Playing with pytorch and Transformers."
authors = ["Michael Wellner <michael.wellner@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
pandas = "^1.2.4"
sklearn = "^0.0"
matplotlib = "^3.4.2"
dataprep = "^0.3.0"
spacy = "^3.0.6"
spacy-transformers = "^1.0.2"
tqdm = "^4.60.0"
pytorch-lightning = "^1.3.2"
transformers = "^4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
